fix: "searching..." wrap on small screens

--- a/packages/frontend/src/components/SearchLocation/SearchLocation.module.css
+++ b/packages/frontend/src/components/SearchLocation/SearchLocation.module.css
@@ -64,3 +64,7 @@
   line-height: normal;
   color: var(--search-location-form-header-font-color, #1e222a);
 }
+
+.formStatus {
+  font-size: var(--search-location-formstatus-font-size, 16px);
+}
