--- a/packages/frontend/src/components/SearchLocation/SearchLocation.vars.css
+++ b/packages/frontend/src/components/SearchLocation/SearchLocation.vars.css
@@ -26,6 +26,7 @@
   --search-location-form-horizonal-padding: var(--size-general-6x, 48px);
   --search-location-form-max-width: 750px;
   --seach-location-form-header-font-size: var(--font-size-xl, 20px);
+  --search-location-formstatus-font-size: var(--font-size-l, 16px);
 }
 
 :root[data-platform='web-tablet'] {
@@ -51,6 +52,7 @@
   --search-location-form-horizonal-padding: var(--size-general-6x, 48px);
   --search-location-form-max-width: 750px;
   --seach-location-form-header-font-size: var(--font-size-xl, 20px);
+  --search-location-formstatus-font-size: var(--font-size-l, 16px);
 }
 
 :root[data-platform='web-mobile'] {
@@ -74,11 +76,19 @@
   --search-location-form-horizonal-padding: var(--size-general-2x, 16px);
   --search-location-form-max-width: 600px;
   --seach-location-form-header-font-size: var(--font-size-xl, 20px);
+  --search-location-formstatus-font-size: var(--font-size-l, 16px);
 }
 
+/* special variables for ultra small displays */
 @media (width <= 405px) {
-  /* special variable for ultra small displays */
   :root[data-platform='web-mobile'] {
     --seach-location-form-header-font-size: var(--font-size-l, 16px);
+    --search-location-formstatus-font-size: var(--font-size-m, 14px);
+  }
+}
+
+@media (width < 375px) {
+  :root[data-platform='web-mobile'] {
+    --search-location-formstatus-font-size: var(--font-size-s, 12px);
   }
 }
